<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/receivedMessage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexandre.networkcom.MainActivity">

    <EditText
        android:id="@+id/txtIpaddress"
        android:hint="@string/ipaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtPortNumber"
        android:hint="@string/portnumber"
        android:layout_below="@id/txtIpaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonConnect"
        android:text="@string/connection"
        android:layout_below="@id/txtPortNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtIncommingMessage"
        android:hint="@string/messageReceived"
        android:layout_below="@id/buttonConnect"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonClear"
        android:text="@string/clear"
        android:layout_below="@id/txtIncommingMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtSendMessage"
        android:layout_marginTop="8dp"
        android:hint="@string/messageToSend"
        android:layout_below="@id/buttonClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonSend"
        android:layout_below="@id/txtSendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />

</RelativeLayout>
